[project]
name = "cat-relay"
version = "1.2.0"
description = "Cat-relay is a tool to turn your SDR into a band scope/panadapter"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pyside6~=6.11.0",
    "platformdirs>=4,<5",
    "pyyaml>=6.0.2",
    "websockets>=16.0",
    "aioxmlrpc>=0.10.0",
]

[dependency-groups]
dev = [
    "pyright>=1.1.409",
]
